fix the text align of the images description

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ a {
     display: flex;
     flex-direction: column;
     padding: 32px 400px;
+    text-align: center;
 }
 
 .info-img {
